--- a/ref/ref.bib
+++ b/ref/ref.bib
@@ -1208,7 +1208,20 @@
   publisher = {Institute of Mathematical Statistics},
 }
 
-@Book{,
+@Article{sims1980macroeconomics,
+  author    = {Sims, Christopher A},
+  title     = {Macroeconomics and reality},
+  journal   = {Econometrica: Journal of the Econometric Society},
+  year      = {1980},
+  pages     = {1--48},
+  publisher = {JSTOR},
+}
+
+@Article{liitkepohl1991introduction,
+  author  = {Liitkepohl, Helmut},
+  title   = {Introduction to multiple time series analysis},
+  journal = {Berlin et al},
+  year    = {1991},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
