--- a/tex/Chap_Intro.tex
+++ b/tex/Chap_Intro.tex
@@ -2,17 +2,13 @@
 \chapter{绪论}
 \label{chap:introduction}
 
-正文从这里开始……
+该模板由linxdcn：https://github.com/linxdcn/TongjiThesis~修改维护。
 
-如果有TeX方面的问题可参考资料英文引用\cite{companion}，中文引用\cite{shaheshang}。
-
-如果有TeX方面的问题可参考资料英文引用(Goosens等, \citeyear{companion})，中文引用(沙和尚等, \citeyear{shaheshang})。
-
-如果有TeX方面的问题可参考资料Goosens等\citeyearpar{companion}，沙和尚等\citeyearpar{shaheshang}。
+模板最初由Tongji LUG创作，2014年，https://sourceforge.net/projects/tongjithesis/。版本之后似乎已停止维护。此版本融合了wildwolf、svandex：https://github.com/svandex/masthesis、zhao-chen：https://github.com/zhao-chen/TongjiThesis~的部分修改。
 
 \section{课题的研究背景及意义}
 
-很久很久以前\cite{tex}，有很多有趣的故事\cite{cnproceed,cnarticle,zhubajie,shaheshang}……
+很久很久以前\cite{tex}，有很多有趣的故事\cite{shaheshang}……
 
 \section{论文的主要工作}
 
